# params-backend-

./: .gitignore  Dockerfile  README.md  app-entry-point.sh  docker-compose-full.yml  docker-compose.yml  env_example  pyproject.toml
backend/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/fixtures/: params_fixture.json
backend/management/commands/: create_params_from_json.py
backend/migrations/: 0001_initial.py  0002_bufferedparametermodel_parametermodel_and_more.py  0002_parametermodel_delete_parameter.py  0003_alter_parametermodel_options_syncloggingmodel.py  0004_bufferedparametermodel_sync_with_main_table.py  0005_alter_bufferedparametermodel_sync_with_main_table.py
docs/: additional.md  routes.md  setup_env_file.md
project/: pagination.py  settings.py  urls.py  utils.py
users/: admin.py  admin_filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_passwordresettoken.py  0003_passwordresettokenmodel_delete_passwordresettoken.py  0003_rename_passwordresettoken_passwordresettokenmodel_and_more.py  0004_alter_passwordresettokenmodel_expired.py  0005_alter_passwordresettokenmodel_expired.py
users/templates/users/email_templates/: password_reset.html
